@@ -135,7 +135,7 @@ AC_ARG_WITH(platform,
 [case "${target}" in
   sparc-sun-solaris2*) PLATFORM_SPECIFIC=s;;
   sparc-sun-sunos4*)   PLATFORM_SPECIFIC=u;;
-  linux-*)             PLATFORM_SPECIFIC=a;;
+  i?86-*-linux)        PLATFORM_SPECIFIC=a;;
   mips-sgi-irix*)      PLATFORM_SPECIFIC=g;;
   *)                   ]AC_MSG_ERROR([Unsupported platform "${target}"])[;;
 esac])
